# epure

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
epure/: __init__.py  boundary.py  check.py  conformance.py  package.py  prove.py  tape.py  tree.py
tests/: test_boundary.py  test_conformance.py  test_import_is_free.py  test_ledger.py  test_open_ready.py  test_package.py  test_prove.py  test_tape_importer.py
tests/fixtures/: python-sem-toy.jsonl
tools/: open_ready.py
